tests/diagnostics/vec_move_element.stderr
error[E0184]: スライス・Vec の非 Copy 要素はムーブで取り出せません
 --> tests/diagnostics/vec_move_element.kal:2:72
  |
2 | { let mut v: Vec<Box<i64>> = vec(); push(v, box(1)); let b: Box<i64> = v[0]; printi(*b); };
  |                                                                        ^^^^
1 個のエラーで中断しました
