tests/diagnostics/vec_move_element.kal
# You cannot move a non-Copy element out of a Vec by indexing.
{ let mut v: Vec<Box<i64>> = vec(); push(v, box(1)); let b: Box<i64> = v[0]; printi(*b); };
